--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -7,11 +7,14 @@ body {
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   line-height: 1.2;
+  font-size: 1vw;
 }
 
 
 .wrapper {
   min-height: 100vh;
+  position: relative;
+  overflow: hidden;
   padding: 2em 0;
   //background: #000112;
   background: radial-gradient(circle, #0A57FA, #010317);
